--- a/app/globals.css
+++ b/app/globals.css
@@ -88,3 +88,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.green-pink-gradient {
+  background: "#00cea8";
+  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+}
